Backend/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herbert-backend
  labels:
    app: herbert-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: herbert-backend
  template:
    metadata:
      labels:
        app: herbert-backend
    spec:
      containers:
        - name: herbert-backend
          image: backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: herbert-backend-service
spec:
  type: NodePort
  selector:
    app: herbert-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
