Backend/k8s/postgres.yaml
# postgres.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rezep-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rezep-database
  template:
    metadata:
      labels:
        app: rezep-database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: rezep-database
spec:
  type: ClusterIP
  selector:
    app: rezep-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
