Backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: herbert-backend-service
                port:
                  number: 8080
